kube-burrner-netpol/proxy-route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: proxyserver
spec:
  to:
    kind: Service
    name: proxyserver
