kube-burrner-netpol/np-allow-from-proxy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-proxy
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-proxy-0
      podSelector:
        matchLabels:
          name: proxyserver
    ports:
    - protocol: TCP
      port: 9001
